Bug 42448: Staff Interface News (newsfooter) text does not have sufficient color contrast
This patch updates the CSS which controls the display of the news item
footer ("Posted by" and edit/new links) in order to improve
accessibility.

To test, apply the patch and rebuild the staff interface CSS.

- If necessary, create at least one news item with the display location
  "Staff interface."
- On the staff interface home page, look at the news items in the
  left-hand sidebar. The "Posted by" line should be clear. A check of
  the text's contrast should show that the contrast is appropriate.

Sponsored-by: Athens County Public Libraries
(cherry picked from commit 754659d9d0eb6e374533967f40418bc639fb196b)

--- a/koha-tmpl/intranet-tmpl/prog/css/src/mainpage.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/mainpage.scss
@@ -19,8 +19,8 @@
 }
 
 .newsfooter {
-    color: #808080;
-    font-size: 80%;
+    color: #585858;
+    margin: .5rem 0;
 }
 
 ul {
